Added header picture

--- a/html/main_page.html
+++ b/html/main_page.html
@@ -48,6 +48,13 @@
                 </div>
             </div>
         </div>
+        <!--Картинка для каждой страницы-->
+        <div class="row">
+            <img src="../img/wallpaper_deer.jpg" alt="Картинка" class="page-image">
+            <div class="image-caption">
+                <h3 class="image-caption-text">Заголовок страницы</h3>
+            </div>
+        </div>
     </div>
 </body>
 </html>
