Added few main page changes

--- a/html/main_page.html
+++ b/html/main_page.html
@@ -109,7 +109,7 @@
             <div class="footer">
                 <div class="row p-5">
                     <div class="col-md-4 offset-md-2">
-                        <p>Вы можете найти нас:</p>
+                        <p>КОНТАКТЫ</p>
                         <ul class="footer-contacts">
                             <li>Ул. Пушкина д. Колотушкина</li>
                             <li>+7-901-790-55-25</li>
