Added about-company page

--- a/html/main_page.html
+++ b/html/main_page.html
@@ -85,6 +85,11 @@
                     </div>
                 </div>
                 <div class="row">
+                    <div class="col-md-6 offset-md-3">
+                        <hr>
+                    </div>
+                </div>
+                <div class="row">
                     <div class="col-md-6 text-div">
                         <p class="text-col">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos quidem vero harum doloremque animi quo aspernatur expedita natus nesciunt, explicabo quibusdam esse et at ad sed. Dolor eveniet nesciunt magni. Repudiandae voluptatum dolorum voluptatem, maxime a quia sunt officiis nesciunt tempore nobis laboriosam dolorem fugiat fugit! Vero quasi asperiores hic nihil consequuntur aliquam sunt qui itaque laudantium doloremque enim mollitia quaerat, similique accusantium voluptatibus deserunt, iste, magni officiis dolores reiciendis ducimus ratione harum. Dicta assumenda velit debitis repellendus neque suscipit consequuntur harum accusantium necessitatibus nam adipisci enim esse corporis doloribus expedita, a reiciendis fugit dolorum provident. Illum, aliquam ipsum? Provident?</p>
                         <img src="../img/wallpaper_deer.jpg" alt="" class="text-img">
@@ -109,21 +114,22 @@
             <div class="footer">
                 <div class="row p-5">
                     <div class="col-md-4 offset-md-2">
-                        <p>КОНТАКТЫ</p>
+                        <p class="footer-caption">КОНТАКТЫ</p>
                         <ul class="footer-contacts">
-                            <li>Ул. Пушкина д. Колотушкина</li>
-                            <li>+7-901-790-55-25</li>
-                            <li>info@ce91.ru</li>
+                            <li class="footer-contacts-li">Ул. Пушкина д. Колотушкина</li>
+                            <li class="footer-contacts-li">+7-901-790-55-25</li>
+                            <li class="footer-contacts-li">info@ce91.ru</li>
                         </ul>
                     </div>
                     <div class="col-md-4">
+                        <p class="footer-caption">МЕНЮ</p>
                         <ul class="footer-menu">
-                            <li><a href="">Главная</a></li>
-                            <li><a href="">О компании</a></li>
-                            <li><a href="">Результаты работ</a></li>
-                            <li><a href="">Наука</a></li>
-                            <li><a href="">Карьера</a></li>
-                            <li><a href="">Контакты</a></li>
+                            <li class="footer-menu-li"><a href="">Главная</a></li>
+                            <li class="footer-menu-li"><a href="">О компании</a></li>
+                            <li class="footer-menu-li"><a href="">Результаты работ</a></li>
+                            <li class="footer-menu-li"><a href="">Наука</a></li>
+                            <li class="footer-menu-li"><a href="">Карьера</a></li>
+                            <li class="footer-menu-li"><a href="">Контакты</a></li>
                         </ul>
                     </div>
                 </div>
