--- a/html/about-company.html
+++ b/html/about-company.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/bootstrap.min.css">
+    <link rel="stylesheet" href="../css/main.css">
     <link rel="stylesheet" href="../css/about-company.css">
     <title>ООО Научно-исследовательский центр технологий "Центрэнгерго"</title>
 </head>
@@ -38,8 +39,8 @@
             <div class="row">
                 <div class="menu-main">
                     <ul class="menu-main-ul">
-                        <li class="menu-main-li" id="active"><a href="#">Главная</a></li>
-                        <li class="menu-main-li"><a href="#">О компании</a></li>
+                        <li class="menu-main-li"><a href="#">Главная</a></li>
+                        <li class="menu-main-li" id="active"><a href="#">О компании</a></li>
                         <li class="menu-main-li"><a href="#">Результаты работ</a></li>
                         <li class="menu-main-li"><a href="#">Наука</a></li>
                         <li class="menu-main-li"><a href="#">Карьера</a></li>
@@ -56,9 +57,58 @@
             </div>
         </div>
         <!--Основной контент страницы-->
-            <div class="content">
+            <div class="content mt-5">
+                <div class="about-company">
+                    <div class="col-md-8 offset-md-2">
+                        <p class="info">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nemo odio hic dolorem. Alias molestiae placeat provident dolore dolor voluptatibus consequuntur, sapiente possimus pariatur accusantium nostrum, eius nisi dolores aliquam quod sunt vero, minima animi. Debitis laborum unde dolorum, sed optio ipsum aliquam odit harum, veniam animi porro aspernatur incidunt fugit perferendis nisi rem ratione pariatur quidem libero. Delectus iusto, a, praesentium odit quos inventore hic iste laborum tempore itaque libero error quia quam minima blanditiis, deserunt labore exercitationem. Porro, repellat inventore numquam error ad perferendis, ratione eligendi sequi quia harum aspernatur facere cum architecto vero incidunt doloribus mollitia expedita quibusdam!</p>
+                    </div>
+                </div>
                 <div class="row">
-                    
+                    <div class="info-table-div col-md-6 offset-md-3">
+                        <table class="info-table table table-striped">
+                            <tr>
+                                <td>Дата основания</td>
+                                <td>1990</td>
+                            </tr>
+                            <tr>
+                                <td>Система менеджмента качества</td>
+                                <td>ISO 9001:2008 ГОСТ РВ 0015-002</td>
+                            </tr>
+                            <tr>
+                                <td>Ключевые рынки</td>
+                                <td>Россия, США, Германия, Франция, Китай, Япония</td>
+                            </tr>
+                            <tr>
+                                <td>Штат сотрудников</td>
+                                <td>250 человек</td>
+                            </tr>
+                        </table>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-6 offset-md-3">
+                        <hr>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-6 text-div">
+                        <p class="text-col">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos quidem vero harum doloremque animi quo aspernatur expedita natus nesciunt, explicabo quibusdam esse et at ad sed. Dolor eveniet nesciunt magni. Repudiandae voluptatum dolorum voluptatem, maxime a quia sunt officiis nesciunt tempore nobis laboriosam dolorem fugiat fugit! Vero quasi asperiores hic nihil consequuntur aliquam sunt qui itaque laudantium doloremque enim mollitia quaerat, similique accusantium voluptatibus deserunt, iste, magni officiis dolores reiciendis ducimus ratione harum. Dicta assumenda velit debitis repellendus neque suscipit consequuntur harum accusantium necessitatibus nam adipisci enim esse corporis doloribus expedita, a reiciendis fugit dolorum provident. Illum, aliquam ipsum? Provident?</p>
+                        <img src="../img/wallpaper_deer.jpg" alt="" class="text-img">
+                    </div>
+                    <div class="col-md-6 text-div">
+                        <img src="../img/wallpaper_deer.jpg" alt="" class="text-img">
+                        <p class="text-col">Atque unde eum in! Optio, nisi neque reprehenderit, id facere voluptatem blanditiis dicta excepturi quod ipsa totam itaque. Temporibus hic sequi illo, reprehenderit optio atque ducimus nesciunt pariatur, architecto minima et veniam sed. Reiciendis placeat est quia nulla dolorum velit, fugit eligendi minus, facilis ipsam omnis aspernatur vitae inventore ipsum nostrum odio ea pariatur id laudantium aperiam amet voluptatibus facere. Laborum exercitationem, quas enim illum quod numquam dolore veritatis excepturi in facere! Dolores optio dicta necessitatibus similique, reprehenderit fuga in excepturi, magnam iure facilis reiciendis nobis nemo. Incidunt rerum quam vitae quibusdam quod numquam, eveniet reiciendis adipisci alias, dolores vel!</p>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-6 text-div">
+                        <p class="text-col">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos quidem vero harum doloremque animi quo aspernatur expedita natus nesciunt, explicabo quibusdam esse et at ad sed. Dolor eveniet nesciunt magni. Repudiandae voluptatum dolorum voluptatem, maxime a quia sunt officiis nesciunt tempore nobis laboriosam dolorem fugiat fugit! Vero quasi asperiores hic nihil consequuntur aliquam sunt qui itaque laudantium doloremque enim mollitia quaerat, similique accusantium voluptatibus deserunt, iste, magni officiis dolores reiciendis ducimus ratione harum. Dicta assumenda velit debitis repellendus neque suscipit consequuntur harum accusantium necessitatibus nam adipisci enim esse corporis doloribus expedita, a reiciendis fugit dolorum provident. Illum, aliquam ipsum? Provident?</p>
+                        <img src="../img/wallpaper_deer.jpg" alt="" class="text-img">
+                    </div>
+                    <div class="col-md-6 text-div">
+                        <img src="../img/wallpaper_deer.jpg" alt="" class="text-img">
+                        <p class="text-col">Atque unde eum in! Optio, nisi neque reprehenderit, id facere voluptatem blanditiis dicta excepturi quod ipsa totam itaque. Temporibus hic sequi illo, reprehenderit optio atque ducimus nesciunt pariatur, architecto minima et veniam sed. Reiciendis placeat est quia nulla dolorum velit, fugit eligendi minus, facilis ipsam omnis aspernatur vitae inventore ipsum nostrum odio ea pariatur id laudantium aperiam amet voluptatibus facere. Laborum exercitationem, quas enim illum quod numquam dolore veritatis excepturi in facere! Dolores optio dicta necessitatibus similique, reprehenderit fuga in excepturi, magnam iure facilis reiciendis nobis nemo. Incidunt rerum quam vitae quibusdam quod numquam, eveniet reiciendis adipisci alias, dolores vel!</p>
+                    </div>
                 </div>
             </div>
             <!--Футер-->
@@ -75,8 +125,7 @@
                     <div class="col-md-4">
                         <p class="footer-caption">МЕНЮ</p>
                         <ul class="footer-menu">
-                            <li class="footer-menu-li"><a href="">Главная</a></li>
-                            <li class="footer-menu-li"><a href="">О компании</a></li>
+                            <li class="footer-menu-li"><a href="#">О компании</a></li>
                             <li class="footer-menu-li"><a href="">Результаты работ</a></li>
                             <li class="footer-menu-li"><a href="">Наука</a></li>
                             <li class="footer-menu-li"><a href="">Карьера</a></li>
