Names, pictures, file placing, links

--- a/career.html
+++ b/career.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/bootstrap.min.css">
-    <link rel="stylesheet" href="../css/main.css">
-    <link rel="stylesheet" href="../css/career.css">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/career.css">
     <title>ООО Научно-исследовательский центр технологий "Центрэнгерго"</title>
 </head>
 <body>
@@ -28,32 +28,32 @@
                     <p class="company-description">ООО Научно-исследовательский центр энерготехнологий</p>
                 </div>
                 <div class="col-md-3 menu-right">
-                    <a href="#"><img src="../img/logo.png" alt="Логотип" class="logo"></a>
+                    <a href="#"><img src="img/logo.png" alt="Логотип" class="logo"></a>
                     <div class="contacts">
                         <p class="website">www.ce91.ru</p>
                         <p class="email">info@ce91.ru</p>
-                        <p class="phone">+7-901-790-55-25</p>
+                        <p class="phone">+7(499)317-77-47</p>
                     </div>
                 </div>
             </div>
             <div class="row">
                 <div class="menu-main">
                     <ul class="menu-main-ul">
-                        <li class="menu-main-li" id="active"><a href="#">Главная</a></li>
-                        <li class="menu-main-li"><a href="#">О компании</a></li>
-                        <li class="menu-main-li"><a href="#">Результаты работ</a></li>
-                        <li class="menu-main-li"><a href="#">Наука</a></li>
-                        <li class="menu-main-li"><a href="#">Карьера</a></li>
-                        <li class="menu-main-li"><a href="#">Контакты</a></li>
+                        <li class="menu-main-li"><a href="index.html">Главная</a></li>
+                        <li class="menu-main-li"><a href="about-company.html">О компании</a></li>
+                        <li class="menu-main-li"><a href="results.html">Результаты работ</a></li>
+                        <li class="menu-main-li"><a href="science.html">Наука</a></li>
+                        <li class="menu-main-li" id="active"><a href="#">Карьера</a></li>
+                        <li class="menu-main-li"><a href="contacts.html">Контакты</a></li>
                     </ul>
                 </div>
             </div>
         </div>
         <!--Картинка для каждой страницы-->
         <div class="row">
-            <img src="../img/wallpaper_deer.jpg" alt="Картинка" class="page-image">
+            <img src="img/career/image-caption.jpg" alt="Картинка" class="page-image">
             <div class="image-caption">
-                <h3 class="image-caption-text">Заголовок страницы</h3>
+                <h3 class="image-caption-text">Карьера</h3>
             </div>
         </div>
         <!--Основной контент страницы-->
@@ -113,20 +113,21 @@
                     <div class="col-md-4 offset-md-2">
                         <p class="footer-caption">КОНТАКТЫ</p>
                         <ul class="footer-contacts">
-                            <li class="footer-contacts-li">Ул. Пушкина д. Колотушкина</li>
-                            <li class="footer-contacts-li">+7-901-790-55-25</li>
+                            <li class="footer-contacts-li">109507, г. Москва,
+                                ул. Ферганская, д.25</li>
+                            <li class="footer-contacts-li">+7(499)317-77-47</li>
                             <li class="footer-contacts-li">info@ce91.ru</li>
                         </ul>
                     </div>
                     <div class="col-md-4">
                         <p class="footer-caption">МЕНЮ</p>
                         <ul class="footer-menu">
-                            <li class="footer-menu-li"><a href="">Главная</a></li>
-                            <li class="footer-menu-li"><a href="">О компании</a></li>
-                            <li class="footer-menu-li"><a href="">Результаты работ</a></li>
-                            <li class="footer-menu-li"><a href="">Наука</a></li>
-                            <li class="footer-menu-li"><a href="">Карьера</a></li>
-                            <li class="footer-menu-li"><a href="">Контакты</a></li>
+                            <li class="footer-menu-li"><a href="index.html">Главная</a></li>
+                            <li class="footer-menu-li"><a href="about-company.html">О компании</a></li>
+                            <li class="footer-menu-li"><a href="results.html">Результаты работ</a></li>
+                            <li class="footer-menu-li"><a href="science.html">Наука</a></li>
+                            <li class="footer-menu-li"><a href="career.html">Карьера</a></li>
+                            <li class="footer-menu-li"><a href="contacts.html">Контакты</a></li>
                         </ul>
                     </div>
                 </div>
