--- a/contacts.html
+++ b/contacts.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/bootstrap.min.css">
-    <link rel="stylesheet" href="../css/main.css">
-    <link rel="stylesheet" href="../css/contacts.css">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/contacts.css">
     <title>ООО Научно-исследовательский центр технологий "Центрэнгерго"</title>
 </head>
 <body>
@@ -28,7 +28,7 @@
                     <p class="company-description">ООО Научно-исследовательский центр энерготехнологий</p>
                 </div>
                 <div class="col-md-3 menu-right">
-                    <a href="#"><img src="../img/logo.png" alt="Логотип" class="logo"></a>
+                    <a href="#"><img src="img/logo.png" alt="Логотип" class="logo"></a>
                     <div class="contacts">
                     </div>
                 </div>
@@ -36,21 +36,21 @@
             <div class="row">
                 <div class="menu-main">
                     <ul class="menu-main-ul">
-                        <li class="menu-main-li" id="active"><a href="#">Главная</a></li>
-                        <li class="menu-main-li"><a href="#">О компании</a></li>
-                        <li class="menu-main-li"><a href="#">Результаты работ</a></li>
-                        <li class="menu-main-li"><a href="#">Наука</a></li>
-                        <li class="menu-main-li"><a href="#">Карьера</a></li>
-                        <li class="menu-main-li"><a href="#">Контакты</a></li>
+                        <li class="menu-main-li"><a href="index.html">Главная</a></li>
+                        <li class="menu-main-li"><a href="about-company.html">О компании</a></li>
+                        <li class="menu-main-li"><a href="results.html">Результаты работ</a></li>
+                        <li class="menu-main-li"><a href="science.html">Наука</a></li>
+                        <li class="menu-main-li"><a href="career.html">Карьера</a></li>
+                        <li class="menu-main-li" id="active"><a href="#">Контакты</a></li>
                     </ul>
                 </div>
             </div>
         </div>
         <!--Картинка для каждой страницы-->
         <div class="row">
-            <img src="../img/wallpaper_deer.jpg" alt="Картинка" class="page-image">
+            <img src="img/contacts/img-caption.jpg" alt="Картинка" class="page-image">
             <div class="image-caption">
-                <h3 class="image-caption-text">Заголовок страницы</h3>
+                <h3 class="image-caption-text">Контакты</h3>
             </div>
         </div>
         <!--Основной контент страницы-->
@@ -59,20 +59,21 @@
                     <div class="col-md-7 offset-md-3">
                         <div class="visit-card mt-5 mb-5">
                             <div class="visit-card-logo-container">
-                                <img src="../img/logo.png" alt="" class="visit-card-logo">
+                                <img src="img/logo.png" alt="" class="visit-card-logo">
                             </div>
                             <h2 class="visit-card-main-caption">"Центрэнгерго"</h2>
                             <div class="row">
-                                <div class="col-md-5">
+                                <div class="col-md-6">
                                     <div class="visit-card-contacts">
                                         <table class="visit-card-table">
                                             <tr class="visit-card-tr">
                                                 <td class="visit-card-td">Адрес:</td>
-                                                <td class="visit-card-td">Ул. Пушкина д. Колотушкина</td>
+                                                <td class="visit-card-td">109507, г. Москва,
+                                                    ул. Ферганская, д.25</td>
                                             </tr>
                                             <tr class="visit-card-tr">
                                                 <td class="visit-card-td">Телефон:</td>
-                                                <td class="visit-card-td">+7-901-790-55-25</td>
+                                                <td class="visit-card-td">+7(499)317-77-47</td>
                                             </tr>
                                             <tr class="visit-card-tr">
                                                 <td class="visit-card-td">Почта:</td>
@@ -81,7 +82,7 @@
                                         </table>
                                     </div>
                                 </div>
-                                <div class="col-md-7">
+                                <div class="col-md-6">
                                     <div class="visit-card-activities">
                                         <p class="visit-card-activity">Ремонт и обслуживание турбин</p>
                                         <p class="visit-card-activity">Ремонт и обслуживание парогенераторов</p>
@@ -101,20 +102,21 @@
                     <div class="col-md-4 offset-md-2">
                         <p class="footer-caption">КОНТАКТЫ</p>
                         <ul class="footer-contacts">
-                            <li class="footer-contacts-li">Ул. Пушкина д. Колотушкина</li>
-                            <li class="footer-contacts-li">+7-901-790-55-25</li>
+                            <li class="footer-contacts-li">109507, г. Москва,
+                                ул. Ферганская, д.25</li>
+                            <li class="footer-contacts-li">+7(499)317-77-47</li>
                             <li class="footer-contacts-li">info@ce91.ru</li>
                         </ul>
                     </div>
                     <div class="col-md-4">
                         <p class="footer-caption">МЕНЮ</p>
                         <ul class="footer-menu">
-                            <li class="footer-menu-li"><a href="">Главная</a></li>
-                            <li class="footer-menu-li"><a href="">О компании</a></li>
-                            <li class="footer-menu-li"><a href="">Результаты работ</a></li>
-                            <li class="footer-menu-li"><a href="">Наука</a></li>
-                            <li class="footer-menu-li"><a href="">Карьера</a></li>
-                            <li class="footer-menu-li"><a href="">Контакты</a></li>
+                            <li class="footer-menu-li"><a href="index.html">Главная</a></li>
+                            <li class="footer-menu-li"><a href="about-company.html">О компании</a></li>
+                            <li class="footer-menu-li"><a href="results.html">Результаты работ</a></li>
+                            <li class="footer-menu-li"><a href="science.html">Наука</a></li>
+                            <li class="footer-menu-li"><a href="career.html">Карьера</a></li>
+                            <li class="footer-menu-li"><a href="#">Контакты</a></li>
                         </ul>
                     </div>
                 </div>
