--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/bootstrap.min.css">
-    <link rel="stylesheet" href="../css/main.css">
-    <link rel="stylesheet" href="../css/main-page.css">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/main-page.css">
     <title>ООО Научно-исследовательский центр технологий "Центрэнгерго"</title>
 </head>
 <body>
@@ -28,11 +28,11 @@
                     <p class="company-description">ООО Научно-исследовательский центр энерготехнологий</p>
                 </div>
                 <div class="col-md-3 menu-right">
-                    <a href="#"><img src="../img/logo.png" alt="Логотип" class="logo"></a>
+                    <a href="#"><img src="img/logo.png" alt="Логотип" class="logo"></a>
                     <div class="contacts">
                         <p class="website">www.ce91.ru</p>
                         <p class="email">info@ce91.ru</p>
-                        <p class="phone">+7-901-790-55-25</p>
+                        <p class="phone">+7(499)317-77-47</p>
                     </div>
                 </div>
             </div>
@@ -40,20 +40,20 @@
                 <div class="menu-main">
                     <ul class="menu-main-ul">
                         <li class="menu-main-li" id="active"><a href="#">Главная</a></li>
-                        <li class="menu-main-li"><a href="#">О компании</a></li>
-                        <li class="menu-main-li"><a href="#">Результаты работ</a></li>
-                        <li class="menu-main-li"><a href="#">Наука</a></li>
-                        <li class="menu-main-li"><a href="#">Карьера</a></li>
-                        <li class="menu-main-li"><a href="#">Контакты</a></li>
+                        <li class="menu-main-li"><a href="about-company.html">О компании</a></li>
+                        <li class="menu-main-li"><a href="results.html">Результаты работ</a></li>
+                        <li class="menu-main-li"><a href="science.html">Наука</a></li>
+                        <li class="menu-main-li"><a href="career.html">Карьера</a></li>
+                        <li class="menu-main-li"><a href="contacts.html">Контакты</a></li>
                     </ul>
                 </div>
             </div>
         </div>
         <!--Картинка для каждой страницы-->
         <div class="row">
-            <img src="../img/wallpaper_deer.jpg" alt="Картинка" class="page-image">
+            <img src="img/index/image-caption.jpg" alt="Картинка" class="page-image">
             <div class="image-caption">
-                <h3 class="image-caption-text">Заголовок страницы</h3>
+                <h3 class="image-caption-text">Главная страница</h3>
             </div>
         </div>
         <!--Основной контент страницы-->
@@ -61,7 +61,7 @@
                 <div class="row mt-3 mb-3">
                     <div class="col-md-6 left-content-block">
                         <div class="employee-img-container">
-                            <img src="../img/main-page/employees.jpg" alt="" class="employee-img">
+                            <img src="img/main-page/employees.jpg" alt="" class="employee-img">
                         </div>
                     </div>
                     <div class="col-md-6 right-content-block">
@@ -75,36 +75,36 @@
                 <div class="row mt-3 mb-5">
                     <div class="col-md-6 left-content-block">
                         <h2>Лицензии</h2>
-                        <img src="../img/main-page/license1.png" alt="" class="inline-block">
-                        <img src="../img/main-page/license1.png" alt="" class="inline-block">
+                        <img src="img/main-page/license1.png" alt="" class="inline-block">
+                        <img src="img/main-page/license1.png" alt="" class="inline-block">
                     </div>
                     <div class="col-md-6 right-content-block">
                         <h2 class="text-center mb-4">Партнёры</h2>
                         <div class="partners">
                             <div class="row">
-                                <div class="col-md-4 partner"><img src="../img/main-page/partner1.jpg" alt="" class="partner-img"></div>
-                                <div class="col-md-4 partner"><img src="../img/main-page/partner2.jpg" alt="" class="partner-img"></div>
-                                <div class="col-md-4 partner"><img src="../img/main-page/partner3.gif" alt="" class="partner-img"></div>
+                                <div class="col-md-4 partner"><img src="img/main-page/partner1.jpg" alt="" class="partner-img"></div>
+                                <div class="col-md-4 partner"><img src="img/main-page/partner2.jpg" alt="" class="partner-img"></div>
+                                <div class="col-md-4 partner"><img src="img/main-page/partner3.gif" alt="" class="partner-img"></div>
                             </div>
                             <div class="row">
-                                <div class="col-md-4 partner"><img src="../img/main-page/partner4.jpg" alt="" class="partner-img"></div>
-                                <div class="col-md-4 partner"><img src="../img/main-page/partner5.png" alt="" class="partner-img"></div>
-                                <div class="col-md-4 partner"><img src="../img/main-page/partner6.gif" alt="" class="partner-img"></div>
+                                <div class="col-md-4 partner"><img src="img/main-page/partner4.jpg" alt="" class="partner-img"></div>
+                                <div class="col-md-4 partner"><img src="img/main-page/partner5.png" alt="" class="partner-img"></div>
+                                <div class="col-md-4 partner"><img src="img/main-page/partner6.gif" alt="" class="partner-img"></div>
                             </div>
                             <div class="row">
-                                <div class="col-md-4 partner"><img src="../img/main-page/partner7.jpg" alt="" class="partner-img"></div>
-                                <div class="col-md-4 partner"><img src="../img/main-page/partner8.jpg" alt="" class="partner-img"></div>
-                                <div class="col-md-4 partner"><img src="../img/main-page/partner9.jpg" alt="" class="partner-img"></div>
+                                <div class="col-md-4 partner"><img src="img/main-page/partner7.jpg" alt="" class="partner-img"></div>
+                                <div class="col-md-4 partner"><img src="img/main-page/partner8.jpg" alt="" class="partner-img"></div>
+                                <div class="col-md-4 partner"><img src="img/main-page/partner9.jpg" alt="" class="partner-img"></div>
                             </div>
                             <div class="row">
-                                <div class="col-md-4 partner"><img src="../img/main-page/partner10.jpg" alt="" class="partner-img"></div>
-                                <div class="col-md-4 partner"><img src="../img/main-page/partner11.jpg" alt="" class="partner-img"></div>
-                                <div class="col-md-4 partner"><img src="../img/main-page/partner12.jpg" alt="" class="partner-img"></div>
+                                <div class="col-md-4 partner"><img src="img/main-page/partner10.jpg" alt="" class="partner-img"></div>
+                                <div class="col-md-4 partner"><img src="img/main-page/partner11.jpg" alt="" class="partner-img"></div>
+                                <div class="col-md-4 partner"><img src="img/main-page/partner12.jpg" alt="" class="partner-img"></div>
                             </div>
                             <div class="row">
-                                <div class="col-md-4 partner"><img src="../img/main-page/partner13.jpg" alt="" class="partner-img"></div>
-                                <div class="col-md-4 partner"><img src="../img/main-page/partner14.jpg" alt="" class="partner-img"></div>
-                                <div class="col-md-4 partner"><img src="../img/main-page/partner15.jpg" alt="" class="partner-img"></div>
+                                <div class="col-md-4 partner"><img src="img/main-page/partner13.jpg" alt="" class="partner-img"></div>
+                                <div class="col-md-4 partner"><img src="img/main-page/partner14.jpg" alt="" class="partner-img"></div>
+                                <div class="col-md-4 partner"><img src="img/main-page/partner15.jpg" alt="" class="partner-img"></div>
                             </div>
                         </div>
                     </div>
@@ -116,20 +116,21 @@
                     <div class="col-md-4 offset-md-2">
                         <p class="footer-caption">КОНТАКТЫ</p>
                         <ul class="footer-contacts">
-                            <li class="footer-contacts-li">Ул. Пушкина д. Колотушкина</li>
-                            <li class="footer-contacts-li">+7-901-790-55-25</li>
+                            <li class="footer-contacts-li">109507, г. Москва,
+                                ул. Ферганская, д.25</li>
+                            <li class="footer-contacts-li">+7(499)317-77-47</li>
                             <li class="footer-contacts-li">info@ce91.ru</li>
                         </ul>
                     </div>
                     <div class="col-md-4">
                         <p class="footer-caption">МЕНЮ</p>
                         <ul class="footer-menu">
-                            <li class="footer-menu-li"><a href="">Главная</a></li>
-                            <li class="footer-menu-li"><a href="">О компании</a></li>
-                            <li class="footer-menu-li"><a href="">Результаты работ</a></li>
-                            <li class="footer-menu-li"><a href="">Наука</a></li>
-                            <li class="footer-menu-li"><a href="">Карьера</a></li>
-                            <li class="footer-menu-li"><a href="">Контакты</a></li>
+                            <li class="footer-menu-li"><a href="#">Главная</a></li>
+                            <li class="footer-menu-li"><a href="about-company.html">О компании</a></li>
+                            <li class="footer-menu-li"><a href="results.html">Результаты работ</a></li>
+                            <li class="footer-menu-li"><a href="science.html">Наука</a></li>
+                            <li class="footer-menu-li"><a href="career.html">Карьера</a></li>
+                            <li class="footer-menu-li"><a href="contacts.html">Контакты</a></li>
                         </ul>
                     </div>
                 </div>
